replace RuntimeException with typed checked exceptions and clean up imports
- Add checked exceptions to BulkEmailService and SendMailService interfaces
- Replace RuntimeException wrapping with proper BulkemailServiceException and SendMailServiceException
- Propagate InterruptedException from sendBulkEmail instead of swallowing it
- Make Mailbox record implement Serializable
- Use Stream.toList() and noneMatch() instead of Collectors.toList() and !anyMatch()
- Expand wildcard imports to explicit imports